# noslip_quant_bot

./: .dockerignore  .env.example  .gitignore  .mcp.json  Coin26_0411.csv  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY_BROKER.md  SECURITY_WEB3.md  com.noslip.daily.plist  com.noslip.monthly.plist  com.noslip.onchain.plist  com.noslip.telegram.plist  com.noslip.whale.plist  eslint.config.mjs  glama.json  m1.py  next.config.ts  package-lock.json  package.json  requirements.txt  run_daily.sh  tsconfig.json  vitest.config.ts  vitest.live.config.ts
.claude-plugin/: marketplace.json  plugin.json
app/: globals.css  page.tsx
commands/: arb.md  cardnews.md  forecast.md  onchain.md  prophet.md  setup.md  squad.md
contracts/: NSQToken.sol  NoSlipAccessPass.sol  NoSlipCreditsReceipt.sol  README.md  hardhat.config.ts  package-lock.json  package.json
contracts/solana/programs/noslip_ecosystem/: Cargo.toml
contracts/solana/programs/noslip_ecosystem/src/: lib.rs
deploy/: prediction-api.env.example  prediction-api.service.example
desktop/: README.md  main.js  offline.html  package.json  preload.js
docs/: broker_open_api.md  chat-mode-design.md  control-plane-design.md  federation-orchestrator-design.md  multibot-purpose-design.md  solana-ecosystem-design.md  web3_data_flow.md
electron/: main.js  preload-terminals.js  terminals.html  terminals.js  tray.js
scripts/: build-desktop.sh  test-cli-integration.js
server/: billingCatalog.test.ts  billingCatalog.ts  creditLedger.test.ts  creditLedger.ts  credits.ts  featureGate.test.ts  featureGate.ts  index.js  (+3 more)
(+176 files in other folders)
