[package]
name = "noslip_ecosystem"
version = "0.1.0"
description = "NoSlip Solana ecosystem program (NSQ utility token)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "noslip_ecosystem"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
